--- a/samples/augmented_image_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/augmented_image_java/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.ar.core.apps.augmentedimage.AugmentedImageActivity">
+    tools:context=".AugmentedImageActivity">
 
-  <android.opengl.GLSurfaceView
+  <com.google.ar.sceneform.ArSceneView
       android:id="@+id/surfaceview"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_gravity="top"/>
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 
   <ImageView
       android:id="@+id/image_view_fit_to_scan"
@@ -31,6 +30,8 @@
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:scaleType="fitCenter"
+      android:src="@drawable/fit_to_scan"
+      android:contentDescription="@string/fit_image_to_scan"
       />
 
 </FrameLayout>
