Updating PointCloudNode to draw pyramids per feature.

--- a/samples/cloud_anchor_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/cloud_anchor_java/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <!--
-   Copyright 2018 Google Inc.
+   Copyright 2018 Google LLC
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -17,7 +17,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.ar.core.examples.java.cloudanchor.CloudAnchorActivity">
+    tools:context=".CloudAnchorActivity">
 
 <fragment
     android:id="@+id/sceneform_fragment"
