Adding Sceneform implementation of computervision_java sample.
This moves the cpu camera image into a bitmap that is rotated correctly.

The GPU image capture currently is not supported in Sceneform since
there is no access to OpenGL context via sceneform.

--- a/samples/computervision_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/computervision_java/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.ar.core.examples.java.helloar.ComputerVisionActivity">
+    tools:context=".ComputerVisionActivity">
 
-  <android.opengl.GLSurfaceView
-      android:id="@+id/surfaceview"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_gravity="top"/>
+  <fragment
+      android:id="@+id/sceneform_fragment"
+      class="com.google.ar.sceneform.ux.ArFragment"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
+
+  <ImageView
+      android:id="@+id/cpu_image"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_alignParentTop="true"
+      android:background="@android:color/darker_gray"
+      android:scaleType="centerCrop"
+      android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
